--- a/style.css
+++ b/style.css
@@ -29,3 +29,16 @@ body{
     bottom: 150px;
     left: -100px;
 }
+footer {
+    font-size: 18px;
+    padding: 10px;
+    text-align: center;
+}
+footer a {
+  text-decoration: none;
+  color: #536DFE;
+}
+footer a:hover {
+  text-decoration: underline;
+  color: #000
+}
